0.3.0
 - BREAKING CHANGE: major changes in dcnum postprocessing
 - feat: allow to select whether volume should be computed
 - feat: allow to select whether flickering correction should be done
 - enh: expose background computation parameters in CLI
 - ref: move `manager` module to `gui` module
 - setup: bump dcnum from 0.17.2 to 0.18.0
0.2.2
 - maintenance release
0.2.1
 - fix: cast string to paths when adding a new path to the manager (#6)
 - setup: bump dcnum from 0.16.8 to 0.17.2
0.2.0
 - feat: allow to specify an output directory in the GUI (#3)
 - feat: allow to select the pixel size in the GUI (#4)
 - feat: introduce PathCache for remembering previous output directories
 - ref: support latest dcnum version
 - ci: do not build mac app during checks
0.1.9
  - initial pre-release
0.0.1
 - skeleton release