@@ -27,7 +27,7 @@ classifiers = [
 ]
 license = {text = "GPL version 3.0 or later"}
 dependencies = [
-    "dcnum>=0.18.0",
+    "dcnum>=0.19.1",
     "h5py>=3.0.0, <4",
     "numpy>=1.21, <2",  # CVE-2021-33430
 ]
