@@ -2,9 +2,10 @@
  - BREAKING CHANGE: major changes in dcnum postprocessing
  - feat: allow to select whether volume should be computed
  - feat: allow to select whether flickering correction should be done
+ - feat: allow to specify number of events to analyze
  - enh: expose background computation parameters in CLI
  - ref: move `manager` module to `gui` module
- - setup: bump dcnum from 0.17.2 to 0.18.0
+ - setup: bump dcnum from 0.17.2 to 0.19.1
 0.2.2
  - maintenance release
 0.2.1
